// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexRow should be rendered correctly 1`] = `
<div
  className="root size-36 flex-row-none container align-items-center"
  style={
    Object {
      "columnGap": undefined,
      "rowGap": undefined,
    }
  }
/>
`;

exports[`FlexRow should be rendered correctly with props 1`] = `
<div
  className="root size-24 padding-18 vPadding-24 margin-24 topShadow flex-row-border-bottom-night300 spacing-6 flex-row-night100 container align-items-bottom"
  style={
    Object {
      "columnGap": undefined,
      "rowGap": undefined,
    }
  }
/>
`;
